# EStore

./: .gitattributes  .gitignore  EStore.ipynb  pyproject.toml  pytest.ini
data/: carts.csv  discounts.csv  ordersdb.sql  products.csv  purchases.csv
notebooks/: EStore.ipynb  test_cart.ipynb  test_discount.ipynb  test_product.ipynb  test_purchase.ipynb
src/: EStore.ipynb  app.py  base_transformer.py  cart_transformer.py  constants.py  discount_transformer.py  product_transformer.py  purchase_transformer.py
src/EStore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/app/: app.py
src/app/routers/: cart_router.py  discount_router.py  product_router.py  purchase_router.py
src/dao/: base_transformer.py  cart_transformer.py  discount_transformer.py  product_transformer.py  purchase_transformer.py
src/db/: constants.py  dbsql.py  dbutil.py
src/mysql/: mysql.py
src/schemas/: cart_router.py  cart_schema.py  discount_schema.py  product_schema.py  purchase_schema.py
src/service/: cart_service.py  cart_transformer.py  discount_service.py  discount_transformer.py  product_service.py  product_transformer.py  purchase_service.py  purchase_transformer.py
tests/: conftest.py  test_01_product.py  test_02_cart.py  test_04_purchase.py  test_05_app.py  test_app.py  test_cart.py  test_discount.py  test_product.py  test_purchase.py
