[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EStore"
version = "0.1.0"
description = "ECommerce Store project"
authors = [{ name = "Sandeep Surnella" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}      # <-- tells setuptools that the package root is src
packages = ["*"]                # <-- include all sub-packages under src
